<?xml version="1.0"?>
<package>
  <name>uos_ecto_cells</name>
  <version>1.0.0</version>
  <description>
    This modules contains a number of useful ecto cells.
  </description>

  <maintainer email="mgoerner@uni-osnabrueck.de">Michael Goerner</maintainer>
  <author email="mgoerner@uni-osnabrueck.de">Michael Goerner</author>

  <license>BSD</license>

  <build_depend>ecto</build_depend>
  <build_depend>ecto_pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversion</build_depend>
  <build_depend>object_recognition_core</build_depend>

  <run_depend>ecto</run_depend>
  <run_depend>ecto_pcl</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
